# SmartCare

./: .env.example  .eslintrc.json  .gitignore  .graphifyignore  .pagesignore  404.html  AGENTS.md  API.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  app.js  graphify.html  graphify.yaml  index.html  manifest.json  package-lock.json  package.json  playwright.config.js  precache-manifest.js  pyproject.toml  quran.html  requirements.txt  resume.html  robots.txt  server.bat  server.py  sitemap.xml  styles.css  sw.js  tmp-0dad921.css  tmp-0dad921.html  upgrades.md
.github/: CODEOWNERS  dependabot.yml
.github\workflows/: ci.yml
.graphify/: .graphify_describe_pending  .graphify_detect.json  .graphify_labels.json  GRAPH_REPORT.md  branch.json  graph.json  manifest.json  scope.json  worktree.json
.well-known/: assetlinks.json
TOC/: .gitignore  All Merged TOC.md  EMT NREMT Study Guide TOC.json  Emergency care TOC.json  International Trauma Life Support TOC.json  Recommended Ultimate TOC (v2).md  Recommended Ultimate TOC.md  c10s1-c10s4.js  c10s5-c10s8.js  c2s1-c2s4.js  c2s5-c2s7.js  c2s8-c2s11.js  c4s1-c4s4.js  c4s5-c4s8.js  c4s9-c4s11.js  c5s1-c5s4.js  c5s5-c5s8.js  c5s9-c5s11.js  c6s1-c6s4.js  c6s5-c6s8.js  c6s9-c6s11.js  c7s1-c7s4.js  c7s5-c7s8.js  c8s1-c8s3.js  c8s4-c8s6.js  c8s7-c8s9.js  c9s1-c9s4.js  c9s5-c9s7.js  sections-c1s5-c1s7.js
_archive/: ECG-ecg.json  ECG-ecg_temp.json  Ob-Gyn-obs-exam.json  build_content.py  chapter-template.html  content.js  generate-chapters.js  generate_chapters.py  index-beautiful.html  index-new.html  prometric-exam2.css  prometric-snapshot2.txt  prometric-snapshot4.txt  psych_exam-psych_exam.json  src-acls.html  src-bdls.html  src-bls.html  src-empact.html  src-itls.html  src-medical.html  src-pals.html  src-pepp.html  src-ppet.html
chapters/: c-index.html  c0.html  c1.html  c10-1.html  c10-2.html  c10-3.html  c10-4.html  c10.html  c11-1.html  c2-2.html  c2-3.html  c2-4.html  c2-5.html  c2.html  c3-1.html  c3-2.html  c3-3.html  c3-4.html  c3.html  c4-1.html  c4-2.html  c4-3.html  c4-4.html  c4-5.html  c4-6.html  c4-7.html  c4-8.html  c4-9.html  c4.html  c5-1.html  c5-2.html  c5.html  c6-1.html  c6-10.html  c6-11.html  c6-12.html  (+74 more)
(+1097 files in other folders)
