[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100
# Archived / superseded one-off generators and ad-hoc investigation scripts
# are not part of the maintained codebase and are excluded from linting.
extend-exclude = ["_archive", "reports"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# One-off content generator: long f-string replacements are intentional.
"scripts/gen.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
