[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100
# Archived / superseded one-off generators and ad-hoc investigation scripts
# are not part of the maintained codebase and are excluded from linting.
extend-exclude = ["_archive", "reports"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures: conftest import style varies across ruff versions.
"tests/conftest.py" = ["I001"]
# One-off content generators: long f-string replacements / data strings are intentional.
"scripts/gen.py" = ["E501"]
"scripts/generate_all_itls_data.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
